--- a/src/AppBundle/Resources/views/Site/index.html.twig
+++ b/src/AppBundle/Resources/views/Site/index.html.twig
@@ -32,9 +32,13 @@
             <!--right-->
             <div class="col-md-9">
 
-              <ul>
-                {% for advert in anounce%}
-                    <li></li>
+              <ul class="list">
+                {% for advert in listAdvert%}
+
+                        <li style="margin-bottom: 5px; background-color: #dadada; border-radius: 5px; height: 60px; color: white">
+                            <a style="color: #444; " href={{ path('app_viewAd', {'id': advert.id}) }}>{{ advert.title }} by {{ advert.author}}</a>
+                        </li>
+
                 {% endfor %}
               </ul>
 
