--- a/src/AppBundle/Resources/views/Site/newAdvert.html.twig
+++ b/src/AppBundle/Resources/views/Site/newAdvert.html.twig
@@ -1,11 +1,13 @@
 {% extends "::layout.html.twig" %}
 
 {% block body %}
+    <div class="col-md-offset-3 col-md-9">
     <div class="createAccountTitle">
         <h1>Create an advert</h1>
     </div>
 
     <div class="formLayout">
         {{ form(form) }}
+    </div>
     </div>
 {% endblock %}
