--- a/src/AppBundle/Resources/views/Site/viewAd.html.twig
+++ b/src/AppBundle/Resources/views/Site/viewAd.html.twig
@@ -2,21 +2,26 @@
 
 {% block body %}
 
+    <div class="col-md-offset-3 col-md-9">
     <div style="margin-top: 100px; text-align: center">
         <h2>{{ advert.title }}</h2>
         <p>by {{ advert.author }}</p>
+        <p>Located at: {{ advert.address }}, {{ advert.postalCode }} {{ advert.city }}</p>
         <hr><br>
         {% if (advert.image != null) %}
             <img style="height: 200px" src={{ asset(advert.image.webPath) }}><br>
         {% endif %}
             <p style="margin-top: 30px; width: 50%; margin-left: auto; margin-right: auto">{{ advert.content }}</p>
     </div>
-    <div>
+    <div class="marginBot">
+
+        {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
         <form style="text-align: center">
             <a href="{{ path('app_deleteAd', {'id': advert.id}) }}"><input type="button" value="Delete ad"/></a>
             <a href="{{ path('app_editAd', {'id': advert.id}) }}"><input type="button" value="Edit ad"/></a>
         </form>
+        {% endif %}
 
     </div>
-
+</div>
 {% endblock %}
