--- a/src/AppBundle/Resources/views/Site/deleteAd.html.twig
+++ b/src/AppBundle/Resources/views/Site/deleteAd.html.twig
@@ -1,10 +1,12 @@
 {% extends "::layout.html.twig" %}
 
 {% block body %}
+<div class="col-md-offset-3 col-md-9">
     <h2 style="margin-top: 100px; text-align: center">Are you sure you want to delete this ad?</h2>
     <form style="text-align: center" action="{{ path('app_deleteAd', {'id': advert.id}) }}" method="post">
         <a style="color: #000;" href="{{ path('app_viewAd', {'id': advert.id}) }}"><input type="button" value="Return to ad"></a>
         <input style="color: black" type="submit" value="Delete">
         {{ form_rest(form) }}
     </form>
+    </div>
 {% endblock %}
