--- a/src/UserBundle/Resources/views/Security/login_content.html.twig
+++ b/src/UserBundle/Resources/views/Security/login_content.html.twig
@@ -1,4 +1,4 @@
-{% trans_default_domain 'FOSUserBundle' %}
+{% trans_default_domain 'UserBundle' %}
 <div class="col-md-offset-3 col-md-9">
 {% if error %}
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
@@ -11,7 +11,7 @@
 
     <h2 class="marginBot">Log in</h2>
 
-    <label for="username">{{ 'username'|trans }}</label><br>
+    <label for="first name">{{ 'username'|trans }}</label><br>
     <input class="marginBot" type="text" id="username" name="_username" value="{{ last_username }}" required="required" /><br>
 
     <label for="password">{{ 'password'|trans }}</label><br>
